[gd_scene load_steps=94 format=2]

[ext_resource path="res://assets/scripts/sfx.gd" type="Script" id=1]
[ext_resource path="res://assets/scripts/mystery_box.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/Lighting/light.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/guns/2DMBIE arcade machine1-sheet1.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/arcademachine/Unsettling music box sound 2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/player/notenoughmoney.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/arcademachine/Unsettling music box sound 1.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/arcademachine/Unsettling music box sound 3.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/Jukebox/Electrical Humming 50hz.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/scripts/lights/lightbulb_broken.gd" type="Script" id=10]
[ext_resource path="res://assets/sprites/guns/m4a1.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/guns/2DMBIE arcade idle animation.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 1200, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 1500, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 1800, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 2100, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 2400, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 2700, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 3000, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 3300, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 3600, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 3900, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 4200, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 4500, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 4800, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 5100, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 5400, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 5700, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 6000, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 6300, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 6600, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 6900, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 7200, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 7500, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 7800, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 8100, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 0, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 300, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 600, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 900, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 1200, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 1500, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 1800, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 2100, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 2400, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 2700, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 3000, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 3300, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 3600, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 3900, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 4200, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 4500, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 4800, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 5100, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 5400, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 5700, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 6000, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 6300, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 6600, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 6900, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 7200, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 7500, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 7800, 641, 300, 641 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 8100, 641, 300, 641 )

[sub_resource type="SpriteFrames" id=57]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": false,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 12 )
region = Rect2( 300, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 12 )
region = Rect2( 600, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 12 )
region = Rect2( 900, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 12 )
region = Rect2( 1200, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 12 )
region = Rect2( 1500, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 12 )
region = Rect2( 1800, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 12 )
region = Rect2( 2100, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 12 )
region = Rect2( 2400, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 12 )
region = Rect2( 2700, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 12 )
region = Rect2( 3000, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 12 )
region = Rect2( 3300, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 12 )
region = Rect2( 3600, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 12 )
region = Rect2( 3900, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 12 )
region = Rect2( 4200, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 12 )
region = Rect2( 4500, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 12 )
region = Rect2( 4800, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 12 )
region = Rect2( 5100, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 12 )
region = Rect2( 5400, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 12 )
region = Rect2( 5700, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 12 )
region = Rect2( 6000, 0, 300, 641 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 12 )
region = Rect2( 6300, 0, 300, 641 )

[sub_resource type="SpriteFrames" id=80]
animations = [ {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=81]
extents = Vector2( 100, 120 )

[node name="Mystery_Box" type="Node2D"]
z_index = -5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -56 )
scale = Vector2( 0.161017, 0.3 )
z_index = 5
texture = ExtResource( 11 )

[node name="Light2D2" type="Light2D" parent="."]
visible = false
position = Vector2( 0, -56 )
z_index = 4
texture = ExtResource( 3 )
color = Color( 1, 0.819608, 0, 1 )

[node name="AnimatedSpriteCycle" type="AnimatedSprite" parent="."]
position = Vector2( 4.76837e-07, -9.53674e-07 )
scale = Vector2( 0.431667, 0.431667 )
frames = SubResource( 57 )

[node name="AnimatedSpriteIdle" type="AnimatedSprite" parent="."]
position = Vector2( 4.76837e-07, -9.53674e-07 )
scale = Vector2( 0.431667, 0.431667 )
frames = SubResource( 80 )
frame = 7
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
script = ExtResource( 10 )

[node name="buyarea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="buyarea"]
shape = SubResource( 81 )

[node name="sfx" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="buy" type="Node2D" parent="sfx"]

[node name="BuySound" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 7 )
volume_db = 1.0
bus = "Music"

[node name="BuySound2" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 5 )
volume_db = 1.0
bus = "Music"

[node name="BuySound3" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 8 )
volume_db = 1.0
bus = "Music"

[node name="not_enough_money" type="Node2D" parent="sfx"]

[node name="notenoughmoney" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 6 )
volume_db = 2.0
bus = "Soundeffects"

[node name="notenoughmoney2" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 6 )
volume_db = 2.0
pitch_scale = 0.98
bus = "Soundeffects"

[node name="notenoughmoney3" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 6 )
volume_db = 2.0
pitch_scale = 1.03
bus = "Soundeffects"

[node name="Ambientsound" type="Node2D" parent="sfx"]

[node name="ElectricalHumming" type="AudioStreamPlayer2D" parent="sfx/Ambientsound"]
stream = ExtResource( 9 )
volume_db = 1.0
autoplay = true
max_distance = 500.0
bus = "Soundeffects"

[node name="Timer_buy_wait_time" type="Timer" parent="."]

[connection signal="play_sound" from="." to="sfx" method="_on_puck_a_panch_play_sound"]
[connection signal="timeout" from="Timer" to="Light2D" method="_on_Timer_timeout"]
[connection signal="body_entered" from="buyarea" to="." method="_on_buyarea_body_entered"]
[connection signal="body_exited" from="buyarea" to="." method="_on_buyarea_body_exited"]
[connection signal="timeout" from="Timer_buy_wait_time" to="." method="_on_Timer_buy_wait_time_timeout"]
